--- a/public/course.html
+++ b/public/course.html
@@ -132,15 +132,15 @@
           <h3 class="text-2xl font-semibold text-gray-100 mb-4">Підготовка до ЗНО/НМТ</h3>
           <p class="text-gray-400 mb-4">Інтенсивний курс для успішного складання ЗНО/НМТ. Покриваємо всі теми: алгебра, геометрія, тригонометрія, ймовірність.</p>
           <ul class="list-disc list-inside text-gray-400 mb-6 space-y-2">
-            <li>Формат: групові (до 8 учнів) або індивідуальні заняття</li>
+            <li>Формат: групові (3-8 учнів) , парні (2 учні) , індивідуальні заняття</li>
             <li>Тривалість заняття: 55 хвилин</li>
-            <li>Тривалість: 9 місяців (групові), гнучкий графік (індивидуальні)</li>
+            <li>Тривалість: групові/парні : від початку навчання до кінця травня ,індивидуальні : гнучкий графік </li>
             <li>Практика: тести, задачі, симуляції іспитів</li>
           </ul>
           <h4 class="text-lg font-semibold text-gray-100 mb-2">Розклад</h4>
           <p class="text-gray-400 mb-4">Групові: ми пропонуємо вам декілька варіантів, ви можете обрати той, що підходить саме вам; Індивидуальні: за домовленістю</p>
           <h4 class="text-lg font-semibold text-gray-100 mb-2">Ціни</h4>
-          <p class="text-gray-400 mb-6">Групові: 250 грн/заняття; Індивидуальні: 400 грн/заняття</p>
+          <p class="text-gray-400 mb-6">Групові: 200 грн/заняття; Парні: грн/заняття , 250 Індивидуальні: 400 грн/заняття</p>
           <div class="max-w-md mx-auto bg-gray-800 rounded-xl p-6 shadow-lg border-2 border-blue-900 mb-6">
             <p class="text-lg font-semibold text-gray-100 text-center">Акція: якщо оплачується від 10 занять, то на кожне заняття знижка 50 грн!</p>
           </div>
@@ -163,15 +163,15 @@
           <h3 class="text-2xl font-semibold text-gray-100 mb-4">Програми для 1–11 класів</h3>
           <p class="text-gray-400 mb-4">Покращення знань з математики, підготовка до контрольних робіт та іспитів. Індивідуальний підхід до кожного учня.</p>
           <ul class="list-disc list-inside text-gray-400 mb-6 space-y-2">
-            <li>Формат: індивідуальні заняття</li>
+            <li>Формат: парні або індивідуальні заняття</li>
             <li>Тривалість заняття: 55 хвилин</li>
             <li>Теми: арифметика, алгебра, геометрія, логіка</li>
             <li>Практика: задачі, інтерактивні вправи, домашні завдання</li>
           </ul>
           <h4 class="text-lg font-semibold text-gray-100 mb-2">Розклад</h4>
-          <p class="text-gray-400 mb-4">Індивидуальні: за домовленістю</p>
+          <p class="text-gray-400 mb-4">Індивидуальні: за домовленістю , парні : 2 рази на тиждень </p>
           <h4 class="text-lg font-semibold text-gray-100 mb-2">Ціни</h4>
-          <p class="text-gray-400 mb-6">Індивидуальні: 350 грн/заняття</p>
+          <p class="text-gray-400 mb-6">Індивидуальні: 350 грн/заняття, парнні : 350 грн/заняття>
           <div class="max-w-md mx-auto bg-gray-800 rounded-xl p-6 shadow-lg border-2 border-blue-900 mb-6">
             <p class="text-lg font-semibold text-gray-100 text-center">Акція: якщо оплачується від 10 занять, то на кожне заняття знижка 50 грн!</p>
           </div>
@@ -203,15 +203,15 @@
           <h3 class="text-2xl font-semibold text-gray-100 mb-4">Scratch (8–12 років)</h3>
           <p class="text-gray-400 mb-4">Веселе введення в програмування через створення ігор та анімацій. Ідеально для дітей 9–12 років.</p>
           <ul class="list-disc list-inside text-gray-400 mb-6 space-y-2">
-            <li>Формат: групові (до 8 учнів) або індивідуальні заняття</li>
+            <li>Формат: групові (до 8 учнів) , парні ( 2 учня), індивідуальні заняття</li>
             <li>Тривалість заняття: 1,5 години</li>
             <li>Практика: створення ігор, анімацій, історій</li>
             <li>Тривалість: 3 місяці (групові), гнучкий графік (індивидуальні)</li>
           </ul>
           <h4 class="text-lg font-semibold text-gray-100 mb-2">Розклад</h4>
-          <p class="text-gray-400 mb-4">Групові: ми пропонуємо вам декілька варіантів, ви можете обрати той, що підходить саме вам; Індивидуальні: за домовленістю</p>
+          <p class="text-gray-400 mb-4">Групові/парні: ми пропонуємо вам декілька варіантів, ви можете обрати той, що підходить саме вам; Індивидуальні: за домовленістю</p>
           <h4 class="text-lg font-semibold text-gray-100 mb-2">Ціни</h4>
-          <p class="text-gray-400 mb-6">Групові: 250 грн/заняття; Індивидуальні: 400 грн/заняття</p>
+          <p class="text-gray-400 mb-6">Парні: 200 грн/заняття; Групові: 250 грн/заняття; Індивидуальні: 400 грн/заняття</p>
           <div class="max-w-md mx-auto bg-gray-800 rounded-xl p-6 shadow-lg border-2 border-blue-900 mb-6">
             <p class="text-lg font-semibold text-gray-100 text-center">Акція: якщо оплачується від 10 занять, то на кожне заняття знижка 50 грн!</p>
           </div>
@@ -240,9 +240,9 @@
             <li>Тривалість: 6 місяців (групові), гнучкий графік (індивидуальні)</li>
           </ul>
           <h4 class="text-lg font-semibold text-gray-100 mb-2">Розклад</h4>
-          <p class="text-gray-400 mb-4">Групові: ми пропонуємо вам декілька варіантів, ви можете обрати той, що підходить саме вам; Індивидуальні: за домовленістю</p>
+          <p class="text-gray-400 mb-4">Групові/парні: ми пропонуємо вам декілька варіантів, ви можете обрати той, що підходить саме вам; Індивидуальні: за домовленістю</p>
           <h4 class="text-lg font-semibold text-gray-100 mb-2">Ціни</h4>
-          <p class="text-gray-400 mb-6">Групові: 250 грн/заняття; Індивидуальні: 400 грн/заняття</p>
+          <p class="text-gray-400 mb-6">Парні: 200 грн/заняття; Групові: 250 грн/заняття; Індивидуальні: 400 грн/заняття</p>
           <div class="max-w-md mx-auto bg-gray-800 rounded-xl p-6 shadow-lg border-2 border-blue-900 mb-6">
             <p class="text-lg font-semibold text-gray-100 text-center">Акція: якщо оплачується від 10 занять, то на кожне заняття знижка 50 грн!</p>
           </div>
@@ -271,9 +271,9 @@
             <li>Тривалість: 4 місяці (групові), гнучкий графік (індивидуальні)</li>
           </ul>
           <h4 class="text-lg font-semibold text-gray-100 mb-2">Розклад</h4>
-          <p class="text-gray-400 mb-4">Групові: ми пропонуємо вам декілька варіантів, ви можете обрати той, що підходить саме вам!; Індивидуальні: за домовленістю</p>
+          <p class="text-gray-400 mb-4">Групові/парні: ми пропонуємо вам декілька варіантів, ви можете обрати той, що підходить саме вам!; Індивидуальні: за домовленістю</p>
           <h4 class="text-lg font-semibold text-gray-100 mb-2">Ціни</h4>
-          <p class="text-gray-400 mb-6">Групові: 250 грн/заняття; Індивидуальні: 400 грн/заняття</p>
+          <p class="text-gray-400 mb-6">Парні: 200 грн/заняття; Групові: 250 грн/заняття; Індивидуальні: 400 грн/заняття</p>
           <div class="max-w-md mx-auto bg-gray-800 rounded-xl p-6 shadow-lg border-2 border-blue-900 mb-6">
             <p class="text-lg font-semibold text-gray-100 text-center">Акція: якщо оплачується від 10 занять, то на кожне заняття знижка 50 грн!</p>
           </div>
